Add core models, DbContext setup, and JWT configuration for authentication and mood tracking.

--- a/backend/GrowAndGlow.Api/appsettings.json
+++ b/backend/GrowAndGlow.Api/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "ConnectionStrings": {
+    "SQLite": "Data Source=growandglow.db",
+    "Postgres": ""
+  },
+  "Jwt": {
+    "Key": "REPLACE_WITH_A_SECRET_KEY",
+    "Issuer": "GrowAndGlow",
+    "Audience": "GrowAndGlowUsers"
   },
   "AllowedHosts": "*"
 }
