Added AuthController and RefreshToken DTO; backend authentication flow operational

--- a/backend/GrowAndGlow.Api/appsettings.json
+++ b/backend/GrowAndGlow.Api/appsettings.json
@@ -4,7 +4,7 @@
     "Postgres": ""
   },
   "Jwt": {
-    "Key": "REPLACE_WITH_A_SECRET_KEY",
+    "Key": "gL0wTh3St@r$Sh!n3Br!ghTly_2025_G&G",
     "Issuer": "GrowAndGlow",
     "Audience": "GrowAndGlowUsers"
   },
